fixed leaderboard spacing issues

--- a/frontend/less/variables.less
+++ b/frontend/less/variables.less
@@ -36,6 +36,7 @@
 @data-rounded: 5px;
 @data-height: 18px;
 @data-leaderbaord-margin: 4px;
+@data-size: calc(@default-margin + @data-height + @default-font-size + (@data-padding * 2));
 
 //Indicator
 @indic-size: 10px;
